[tool.poetry]
name = "AoC2022"
version = "0.1.0"
description = "Solutions to Advent of Code 2022 problems"
authors = ["Dan Halligan"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
typer = "^0.3.2"
numpy = "^1.21.4"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
aoc2022 = "aoc2022.cli:main"
